# ap-tauri

./: .gitignore  README.md
crates/tauri-runtime-wry/: Cargo.toml
crates/tauri-runtime-wry/src/: lib.rs
src/: index.html  splashscreen.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  constants.rs  main.rs  menu.rs  protocol.rs  store.rs  webview.rs
src-tauri/src/js/: script.js
src-tauri/wix/: main.wxs  uninstall.wxs
