[package]
name = "aiming-pro-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["Aiming.Pro"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["devtools", "global-shortcut-all"] }
wry = {version="0.22.5"}
tokio = { version="1.22.0"}
discord-rich-presence = { version = "0.2.3" }
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link.git" }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = {version="0.19.1"}
windows = { version = "0.39.0" }

[patch.crates-io]
tauri-runtime-wry = { path="../crates/tauri-runtime-wry" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
