[package]
name = "aiming-pro-tauri"
version = "2.0.1"
description = "A Tauri App"
authors = ["Aiming.Pro"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.7", features = [
  "shell-open",
  "devtools",
  "global-shortcut-all",
  "updater",
] }
tokio = { version = "1.22.0" }
discord-rich-presence = { version = "0.2.4" }
tauri-plugin-deep-link = { version = "0.1.2" }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = { version = "0.19.1" }
windows = { version = "0.39.0" }
open = "5.1.3"

# [patch.crates-io]
# tauri-runtime-wry = { path = "../crates/tauri-runtime-wry" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
